--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="hero">
       <div id="navbar" class="navbar top">
         <h1 class="logo">
-          <span class="text-primary"></i> Ncenga</span
+          <span class="text-primary"></i>Ncenga</span
           >
         </h1>
         <nav>
@@ -43,7 +43,7 @@
 
     <main>
       <!-- About: Icons -->
-      <section id="about" class="icons bg-light">
+      <section id="about" class="icons bg-dark">
         <div class="flex-items">
           <div>
             <i class="fas fa-university fa-2x"></i>
@@ -122,7 +122,7 @@
       </section>
 
       <!-- Cases -->
-      <section id="cases" class="cases flex-grid section-padding">
+      <section id="cases" class="cases flex-grid section-padding bg-dark">
         <header class="section-header">
           <h4>This is what we do</h4>
           <h2>Business Cases</h2>
